[metadata]
name = ironic-python-agent-sapcc-extensions
author = Fabian Wiesel
author_email = fabian.wiesel@sap.com
summary = IPA SAPCC Extensions
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[files]
packages =
    ironic_python_agent_sapcc_extensions

[entry_points]
ironic_python_agent.extensions =
    sapcc = ironic_python_agent_sapcc_extensions:SapCc

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
